--- a/3/solution.tex
+++ b/3/solution.tex
@@ -71,6 +71,12 @@ Najprv zavedieme pomocnú funkciu \textit{mul}:
 \end{align*}
 
 \section*{Úloha č.2}
+Diagonalizáciou ukážeme, že počet ohodnotení unárneho predikátu \textit{u} nad spočetným univerzom je nespočetný. Počet ohodnotení predikátu je totiž rovný $2^{\mathbb{N}}$, pretože pre každý prvok x z $\mathbb{N}$ prvkov univerza môžeme definovať $p(x)$ alebo $\neg p(x)$.
+
+\begin{proof}
+    Predpokladajme, že počet realizácii je spočetný. Potom existuje zobrazenie $f: \mathbb{N} \to 
+    Uvažujme nekonečnú maticu
+\end{proof}
 \section*{Úloha č.3}
 \section*{Úloha č.4}
 Rozhodovací problém farbenia grafov je jazyk ColorGraph = $\{$ (<V>,<E>\#k) | G = (<V>, <E>) je graf
@@ -105,4 +111,8 @@ Reprezentáciu úlohy môžeme vyjadriť tabulkou:
 TODO
 suroviny ako hlavička, pečio ako riadky, Y osa ako vybrané pečivá
 \section*{Úloha č.5}
+\includegraphics{petriNetFinalTake.pdf}
+
+
+
 \end{document}
