--- a/3/solution.tex
+++ b/3/solution.tex
@@ -57,24 +57,26 @@ Fibonačiho postupnosť je možné matematicky zadefinovať nasledujúco:
 \end{align}
 \subsection*{Vyjadrenie funkcie pomocou primitívnej rekurzie}
 
-Najprv zavedieme pomocnú funkciu \textit{mul}:
+Jedným z riešení je zaviesť pomocnú funkciu $K(x)$, ktorej vyčíslenie bude zodpovedať dvojici $(F(x), F(x+1)$ kde $F$ bude funkcia Fibbonaci.
+
+Funkciu $K$ definujeme pomocou primitívnej rekurzie nasledujúco:
 
 \begin{align*}
-    mul(x,0) = \xi
-    mul(x,y+1) = plus (x, mul(y))
+    K(0) &= \xi \times ( \sigma  \mathbin{o} \xi ) () \\
+    K(x+1) &= \pi_3^3 \times (plus  \mathbin{o} ( \pi_2^3 \times \pi_3^3)  (x, K(x))
 \end{align*}
 
+Výsledná funkcia $F(x)$ má potom tvar:
 
 \begin{align*}
-    Fib(0) = \xi () \\
-    Fib(x+1) = neq(x, 0) \times Fib(x monus 1) + Fib(x)
+    F(x) = (\pi_2^2 \mathbin{o} K) (x)
 \end{align*}
 
 \section*{Úloha č.2}
 Diagonalizáciou ukážeme, že počet ohodnotení unárneho predikátu \textit{u} nad spočetným univerzom je nespočetný. Počet ohodnotení predikátu je totiž rovný $2^{\mathbb{N}}$, pretože pre každý prvok x z $\mathbb{N}$ prvkov univerza môžeme definovať $p(x)$ alebo $\neg p(x)$.
 
 \begin{proof}
-    Predpokladajme, že počet realizácii je spočetný. Potom existuje zobrazenie $f: \mathbb{N} \to 
+    Predpokladajme, že počet realizácii je spočetný. Potom existuje zobrazenie $f: \mathbb{N} \to$ 
     Uvažujme nekonečnú maticu
 \end{proof}
 \section*{Úloha č.3}
